# kursovaya-C-

./: CMakeLists.txt  README.md
include/: Array.h  ListElem.h  Node.h  PointersArray.h  PointersList.h
src/: Array.cpp  ListElem.cpp  PointersArray.cpp  PointersList.cpp  main.cpp
